apps/base/beszel/beszel.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beszel-system
  labels:
    networking.tinyrack.net/isolation: enabled
