apps/base/beszel/beszel.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: beszel-system
spec:
  type: ClusterIP
  selector:
    app: beszel
  ports:
    - name: http
      port: 8090
      targetPort: http
      protocol: TCP
