apps/base/beszel/beszel.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-beszel
  namespace: traefik-external-system
  labels:
    networking.tinyrack.net/owner: beszel
  annotations:
    networking.tinyrack.net/hosts: monitor.winetree94.com
spec:
  description: Allow the monitor.winetree94.com route and Beszel callbacks
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: beszel-system
            app: beszel
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
  egress:
    - toServices:
        - k8sService:
            namespace: beszel-system
            serviceName: beszel
      toPorts:
        - ports:
            - port: "8090"
              protocol: TCP
